--- a/pom.xml
+++ b/pom.xml
@@ -11,10 +11,12 @@
 	<groupId>com.api</groupId>
 	<artifactId>SampleRestApiDemom</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>war</packaging>
 	<name>SampleRestApiDemom</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
+		<start-class>com.api.SampleRestApiDemomApplication</start-class>
 	</properties>
 	<dependencies>
 		<dependency>
