--- a/pom.xml
+++ b/pom.xml
@@ -45,14 +45,24 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-			<plugin>    
+			
+		</plugins>
+
+
+		 <pluginManagement>
+      <plugins>
+	      <plugin>    
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
             <source>1.8</source>
             <target>1.8</target>
         </configuration>
     </plugin>
-		</plugins>
+
+
+
+	        </plugins>
+    </pluginManagement>
 
 
 		
