--- a/pom.xml
+++ b/pom.xml
@@ -41,14 +41,15 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
+                                <groupId>org.apache.maven.plugins</groupId>
+                                <artifactId>maven-compiler-plugin</artifactId>
+                                <version>3.1</version>
+                                <configuration>
+                                        <source>1.6</source>
+                                        <target>1.6</target>
+                                </configuration>
+                        </plugin>
 		</plugins>	
 	</build>
-
-	<prerequisites>
-    <maven>3.9.0</maven>
-  </prerequisites>
 
 </project>
