--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,11 @@
                        <verbose>true</verbose>
                    </configuration>
                </plugin>
+
+			<plugin>
+  <artifactId>maven-war-plugin</artifactId>
+  <version>3.11.0</version>
+</plugin>
 			
 		</plugins>	
 	</build>
