--- a/pom.xml
+++ b/pom.xml
@@ -45,16 +45,12 @@
 	</dependencies>
 
 	<build>
-		<plugins>
-			<plugin>
-<groupId>org.springframework.boot</groupId>
-<artifactId>spring-boot-maven-plugin</artifactId>
-</plugin>
+		
 
 
 			 <plugin>
-                   <groupId>org.apache.maven.plugins</groupId>
-                   <artifactId>maven-compiler-plugin</artifactId>
+                    <groupId>com.microsoft.azure</groupId>
+            <artifactId>>azure-webapp-maven-plugin</artifactId>
                    <version>3.0.0</version>
                    <configuration>
                        <source>17</source>
