--- a/pom.xml
+++ b/pom.xml
@@ -49,9 +49,9 @@
 
 
 			 <plugin>
-                    <groupId>com.microsoft.azure</groupId>
-            <artifactId>>azure-webapp-maven-plugin</artifactId>
-                   <version>3.0.0</version>
+                   <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.0.0</version>
                    <configuration>
                        <source>17</source>
                        <target>17</target>
@@ -59,11 +59,7 @@
                    </configuration>
                </plugin>
 
-			<plugin>
-  <artifactId>maven-war-plugin</artifactId>
-  <version>3.0.0</version>
-</plugin>
-			
+					
 		</plugins>	
 	</build>
 
