--- a/pom.xml
+++ b/pom.xml
@@ -46,20 +46,37 @@
 
 	<build>
 		<plugins>
-
-
-			 <plugin>
-                   <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.0.0</version>
-                   <configuration>
-                       <source>17</source>
-                       <target>17</target>
-                       <verbose>true</verbose>
-                   </configuration>
-               </plugin>
-
-					
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+		    <plugin>
+		        <groupId>com.microsoft.azure</groupId>
+		        <artifactId>azure-webapp-maven-plugin</artifactId>
+		        <version>3.0.0</version>
+		        <configuration>
+		            <schemaVersion>v2</schemaVersion>
+		            <resourceGroup>demo-1692279148752-rg</resourceGroup>
+		            <appName>demo-1692279148752</appName>
+		            <pricingTier>P1v2</pricingTier>
+		            <region>centralindia</region>
+		            <runtime>
+		                <os>Linux</os>
+		                <javaVersion>Java 17</javaVersion>
+		                <webContainer>Java SE</webContainer>
+		            </runtime>
+		            <deployment>
+		                <resources>
+		                    <resource>
+		                        <directory>${project.basedir}/target</directory>
+		                        <includes>
+		                            <include>*.jar</include>
+		                        </includes>
+		                    </resource>
+		                </resources>
+		            </deployment>
+		        </configuration>
+		    </plugin>
 		</plugins>	
 	</build>
 
