--- a/pom.xml
+++ b/pom.xml
@@ -36,12 +36,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
   <groupId>org.apache.maven.plugins</groupId>
   <artifactId>maven-compiler-plugin</artifactId>
   <version>3.0.0</version>
   <type>maven-plugin</type>
-</dependency>
+</dependency> -->
 	</dependencies>
 
 	<build>
